--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,8 @@ repository = "https://github.com/Sighery/rustympkglib"
 readme = "README.md"
 keywords = ["arch-linux", "PKGBUILD", "makepkg", "arch-build-system"]
 categories = ["parser-implementations"]
-build = "build.rs"
 
 [dependencies]
 tree-sitter = "0.19"
+tree-sitter-bash = "0.19"
 serde = { version = "1.0", features = ["derive"] }
-
-[build-dependencies]
-cc = "1.0"
